<resources>
    <string name="app_name">Countdown</string>
    <string name="action_settings">Settings</string>
    <string name="countdown_button_text">Start Countdown</string>
    <string name="reset_button_text">Reset Date/Time</string>
    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="init_time">00</string>
    <string name="days_label">DAYS</string>
    <string name="hrs_label">HRS</string>
    <string name="mins_label">MINS</string>
    <string name="secs_label">SECS</string>
</resources>